--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Treasurenet Documention
+title: Treasurenet Documentation
 description: Treasurenet proposes a solution for the critical lack of sustaining and tangible value in the crypto world. Our goal is the combine real world economic drivers and distributed ledger scalability. As a layer 1 protocol, TN will become a model for sustaining value in the fiat world and the digital world.
 theme: just-the-docs
 
